adiciona mais arquivos

--- a/manha/estiloux/index.html
+++ b/manha/estiloux/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,23 +8,71 @@
     <title>Document</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
-    <header>
-        <img src="" alt="Estilo UX">
 
-        <nav>
-            <a href="">Home</a>
-            <a href="">Sobre</a>
-            <a href="">Contato</a>
-        </nav>
+<body>
+    <!-- ****** CABEÇALHO ****** -->
+    <header>
+        <div class="container-grid header-flex"><!-- container flex -->
+            <!-- Título principal da página -->
+            <h1>
+                Estilo<span id="logoux">UX</span>
+            </h1>
+
+            <nav>
+                <a href="">Home</a>
+                <a href="">Sobre</a>
+                <a href="">Contato</a>
+            </nav>
+        </div>
     </header>
 
-    <main></main>
+    <main>
+        <div class="container-grid colunas-flex">
+
+
+            <section class="coluna1">
+                <img id="lapis" src="images/lapis-de-cor.png" alt="Lápis de Cor">
+
+                <h2>Cores com harmonia</h2>
+
+                <p>Entenda como fazer combinação de cores que fazem sentido para sua identidade visual</p>
+
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis vel libero numquam soluta
+                    incidunt
+                    sunt porro unde ratione. Ab quae fuga, facere aspernatur explicabo ad! Facere magnam recusandae
+                    numquam!
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis vel libero numquam soluta
+                    incidunt
+                    sunt porro unde ratione. Ab quae fuga, facere aspernatur explicabo ad! Facere magnam recusandae
+                    numquam!
+                </p>
+
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non, asperiores natus. Aliquam illum natus
+                    ullam voluptatum architecto soluta, hic, ducimus doloremque mollitia impedit perspiciatis excepturi
+                    dolorem quos saepe corrupti. Quam.</p>
+            </section>
+
+            <aside class="coluna2">
+
+                <article>
+                    <h3>Buscar</h3>
+                </article>
+
+                <article>
+                    <h3>Posts Anteriores</h3>
+                </article>
+
+                <article>
+                    <h3>Inscreva-se</h3>
+                </article>
+            </aside>
+
+        </div>
+    </main>
 
     <footer>
         <p>EstiloUX 2023 - Todos os direitos reservados</p>
-
-        <a href="">Clique aqui</a>
     </footer>
 </body>
+
 </html>
