--- a/tarde/estiloux/index.html
+++ b/tarde/estiloux/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div class="grid-layout">
+        <div class="grid-layout header-flex">
             <h1>Estilo<span id="logoux">Ux</span></h1>
             <nav>
                 <a href="">Home</a>
@@ -24,7 +24,7 @@
 
     <main>
         <section>
-            <img src="" alt="Lápis de cor">
+            <img src="images/lapis-de-cor.png" alt="Lápis de cor">
 
             <h2>Cores com harmonia</h2>
 
