Finalização do projeto Estiloux

--- a/manha/estiloux/index.html
+++ b/manha/estiloux/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Estilo Ux</title>
+
     <link rel="stylesheet" href="styles/style.css">
 </head>
 
 <body>
-    <!-- ****** CABEÇALHO ****** -->
     <header>
-        <div class="container-grid header-flex"><!-- container flex -->
-            <!-- Título principal da página -->
-            <h1>
-                Estilo<span id="logoux">UX</span>
-            </h1>
-
+        <div class="container-grid header-flex">
+            <h1>Estilo<span id="logoux">Ux</span></h1>
             <nav>
                 <a href="">Home</a>
                 <a href="">Sobre</a>
@@ -28,50 +24,49 @@
 
     <main>
         <div class="container-grid colunas-flex">
-
-
             <section class="coluna1">
-                <img id="lapis" src="images/lapis-de-cor.png" alt="Lápis de Cor">
+                <img src="images/lapis-de-cor.png" alt="Lápis de cor">
 
                 <h2>Cores com harmonia</h2>
 
                 <p>Entenda como fazer combinação de cores que fazem sentido para sua identidade visual</p>
 
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis vel libero numquam soluta
-                    incidunt
-                    sunt porro unde ratione. Ab quae fuga, facere aspernatur explicabo ad! Facere magnam recusandae
-                    numquam!
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Illo debitis vel libero numquam soluta
-                    incidunt
-                    sunt porro unde ratione. Ab quae fuga, facere aspernatur explicabo ad! Facere magnam recusandae
-                    numquam!
-                </p>
+                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Laboriosam, nesciunt quidem! Repudiandae
+                    maiores provident dolorem harum consequuntur molestiae fugit, suscipit nobis nesciunt aliquid
+                    voluptas
+                    reiciendis enim ea, temporibus, omnis veritatis.Lorem ipsum dolor, sit amet consectetur adipisicing
+                    elit. Laboriosam, nesciunt quidem! Repudiandae maiores provident dolorem harum consequuntur
+                    molestiae
+                    fugit, suscipit nobis nesciunt aliquid voluptas reiciendis enim ea, temporibus, omnis veritatis.</p>
 
-                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Non, asperiores natus. Aliquam illum natus
-                    ullam voluptatum architecto soluta, hic, ducimus doloremque mollitia impedit perspiciatis excepturi
-                    dolorem quos saepe corrupti. Quam.</p>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Natus, sequi iusto in, ratione, hic magnam
+                    amet
+                    sit voluptates corporis quasi iure? Doloremque hic minus recusandae quasi tenetur vero ullam maxime.
+                </p>
             </section>
 
             <aside class="coluna2">
-
                 <article>
                     <h3>Buscar</h3>
                 </article>
-
                 <article>
                     <h3>Posts Anteriores</h3>
                 </article>
-
                 <article>
                     <h3>Inscreva-se</h3>
+                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis soluta voluptate odio a adipisci, nostrum.</p>
+                    <input type="text">
                 </article>
             </aside>
 
-        </div>
+         </div> <!-- fim da div container-grid -->
+
     </main>
 
     <footer>
-        <p>EstiloUX 2023 - Todos os direitos reservados</p>
+        <div class="container-grid">
+            <p>Estilo UX 2023 - Todos os direitos reservados.</p>
+        </div>
     </footer>
 </body>
 
