projeto estiloux tarde

--- a/tarde/estiloux/index.html
+++ b/tarde/estiloux/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <div class="container-grid header-flex">
+        <div class="grid-layout header-flex">
             <h1>Estilo<span id="logoux">Ux</span></h1>
             <nav>
                 <a href="">Home</a>
@@ -23,9 +23,10 @@
     </header>
 
     <main>
-        <div class="container-grid colunas-flex">
+        <div class="grid-layout colunas-flex">
+
             <section class="coluna1">
-                <img src="images/lapis-de-cor.png" alt="Lápis de cor">
+                <img id="lapis" src="images/lapis-de-cor.png" alt="Lápis de cor">
 
                 <h2>Cores com harmonia</h2>
 
@@ -54,19 +55,15 @@
                 </article>
                 <article>
                     <h3>Inscreva-se</h3>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis soluta voluptate odio a adipisci, nostrum.</p>
-                    <input type="text">
                 </article>
             </aside>
-
-         </div> <!-- fim da div container-grid -->
+        </div>
 
     </main>
 
     <footer>
-        <div class="container-grid">
-            <p>Estilo UX 2023 - Todos os direitos reservados.</p>
-        </div>
+
+        <p>Estilo UX 2023 - Todos os direitos reservados.</p>
     </footer>
 </body>
 
