Landing page manhã início da versão mobile

--- a/manha/landing-page-manha/index.html
+++ b/manha/landing-page-manha/index.html
@@ -18,6 +18,7 @@
                 <a href="">Desafios</a>
                 <a href="">Endereço</a>
             </nav>
+            <img src="./assets/icones/menu-hamburger.svg" id="menu-mobile" alt="Abre o menu mobile">
         </div>
     </header>
 
