--- a/tarde/landing-page-tarde/index.html
+++ b/tarde/landing-page-tarde/index.html
@@ -23,9 +23,9 @@
 
     <main>
         <article class="banner">
-            
+
             <div class="layout-grid banner-flex">
-                
+
                 <div id="bannerinfo">
                     <h1>Desenvolvimento de Sistemas 2023</h1>
                     <p>Senai Informática</p>
@@ -34,6 +34,30 @@
 
             </div>
         </article>
+
+
+        <section class="sobre">
+
+            <div class="layout-grid sobre-flex">
+                <div class="sobrebox">
+                    <h2>Sobre os Projetos</h2>
+
+                    <img src="assets/images/imagem-sessao-sobre.png"
+                        alt="Imagem de uma reunião com um palestrante, traje social conversando com quatro pessoas sentadas">
+                </div>
+
+                <div class="participantes">
+                    <h3>Participantes</h3>
+                    <h4>Mais de 80 alunos organizados em 16 grupos</h4>
+
+                    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Animi porro maxime eaque. Dolores quos
+                        temporibus vel vitae, ad minima aperiam possimus maiores eius repellat corporis provident
+                        consequuntur facere odit voluptate! Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                        Natus repellat eligendi impedit animi ex! Illo numquam, facere est ex similique fugiat tempore
+                        sapiente quam eaque veniam a corrupti unde iusto?</p>
+                </div>
+            </div>
+        </section>
     </main>
 
     <footer>
