Inicializa o nav menu

--- a/tarde/projeto-gamer-tarde/index.html
+++ b/tarde/projeto-gamer-tarde/index.html
@@ -12,39 +12,86 @@
 <body>
     <header>
         <div class="header-top">
-            <div class="contatos">
-                <div class="phone">
-                    <img src="assets/icons/icone_telefone.svg" alt="Ícone do telefone de contato">
-                    <p>(11) 0900-1010</p>
+            <div class="layout-grid">
+
+                <div class="contatos">
+                    <div class="phone">
+                        <img src="assets/icons/icone_telefone.svg" alt="Ícone do telefone de contato">
+                        <p>(11) 0900-1010</p>
+                    </div>
+                    <div class="mail">
+                        <img src="assets/icons/icone_email.svg" alt="Ícone de email de contato">
+                        <p>contato@gamer.com.br</p>
+                    </div>
                 </div>
-                <div class="mail">
-                    <img src="assets/icons/icone_email.svg" alt="Ícone de email de contato">
-                    <p>contato@gamer.com.br</p>
+
+                <div class="midias-sociais">
+                    <a href="">
+                        <img src="assets/icons/facebook.svg" alt="Imagem link do facebook da empresa">
+                    </a>
+                    <a href="">
+                        <img src="assets/icons/linkedin.svg" alt="Imagem link do Linkedin da empresa">
+                    </a>
+                    <a href="">
+                        <img src="assets/icons/intagram.svg" alt="Imagem link do instagram da empresa">
+                    </a>
                 </div>
             </div>
-
-            <div class="midias-sociais">
-                <a href="">
-                    <img src="assets/icons/facebook.svg" alt="Imagem link do facebook da empresa">
-                </a>
-                <a href="">
-                    <img src="assets/icons/linkedin.svg" alt="Imagem link do Linkedin da empresa">
-                </a>
-                <a href="">
-                    <img src="assets/icons/intagram.svg" alt="Imagem link do instagram da empresa">
-                </a>
-            </div>
-
         </div>
-        
-        <div class="header-bottom">
-            <img class="logo" src="assets/images/logotipo-gamer.svg" alt="Imagem logotipo gamer com um controle de vídeo game ao centro">
 
-            <nav class="menu">
-                <a href="">Início</a>
-                <a href="">Jogadores</a>
-                <a href="">Notícias</a>
-            </nav>
+        <div class="header-bottom">
+            <div class="layout-grid alinhamento-between-center">
+                <!-- Menu Hamburger. Visível apenas no smartphone -->
+                <img src="assets/icons/bars.svg" alt="Ícone de Telefone. Abre e fecha o menu principal, no celular">
+
+                <img class="logo" src="assets/images/logotipo-gamer.svg"
+                    alt="Imagem logotipo gamer com um controle de vídeo game ao centro">
+
+                <nav class="menu">
+                    <a href="">Início</a>
+                    <a href="">Jogadores</a>
+                    <a href="">Equipes</a>
+                    <a href="">Notícias</a>
+
+                    <!-- vísível apenas no mobile -->
+                    <div class="phone">
+                        <img src="assets/icons/icone_telefone.svg" alt="Ícone do telefone de contato">
+                        <p>(11) 0900-1010</p>
+                    </div>
+                    <div class="mail">
+                        <img src="assets/icons/icone_email.svg" alt="Ícone de email de contato">
+                        <p>contato@gamer.com.br</p>
+                    </div>
+
+
+                    <div class="midias-sociais">
+                        <a href="">
+                            <img src="assets/icons/facebook.svg" alt="Imagem link do facebook da empresa">
+                        </a>
+                        <a href="">
+                            <img src="assets/icons/linkedin.svg" alt="Imagem link do Linkedin da empresa">
+                        </a>
+                        <a href="">
+                            <img src="assets/icons/intagram.svg" alt="Imagem link do instagram da empresa">
+                        </a>
+                    </div>
+                </nav>
+
+                <!-- menu 3 pontinhos -->
+                <img src="assets/icons/pointers.svg" alt="Ícone 3 pontinhos, abre e fecha o menu de usuários">
+
+                <div class="menu-usuarios">
+                    <a href="">
+                        <img src="assets/icons/user.svg" alt="Ícone de perfil">
+                    </a>
+                    <a href="">
+                        <img src="assets/icons/bag.svg" alt="Ícone de sacola">
+                    </a>
+                    <a href="">
+                        <img src="assets/icons/search.svg" alt="Ícone lupa de pesquisa">
+                    </a>
+                </div>
+            </div>
         </div>
     </header>
 </body>
