início do cabeçalho desktop

--- a/manha/projeto-gamer-manha/index.html
+++ b/manha/projeto-gamer-manha/index.html
@@ -58,7 +58,8 @@
                     <!-- visível apenas no mobile -->
 
                     <a class="phone">
-                        <img src="./assets/icons/icone_telefone.svg" alt="Ícone de Telefone. Abre e fecha o menu principal, no celular">
+                        <img src="./assets/icons/icone_telefone.svg"
+                            alt="Ícone de Telefone. Abre e fecha o menu principal, no celular">
                         <span>(11) 0900-1010</span>
                     </a>
                     <a class="email">
@@ -104,8 +105,18 @@
             <h1>Liga Gamers</h1>
             <a href="" class="botao-sobre">Sobre</a>
         </section>
+
+        <section class="jogos">
+            <div class="layout-grid jogos-flex">
+                <img src="assets/images/fifa23.png" alt="Imagem do jogo Fifa 2023">
+                <img src="assets/images/csgo.png" alt="Imagem do jogo Counter Strike">
+            </div>
+
+        </section>
+
+
     </main>
-    
+
     <footer>Todos os diretos reservados</footer>
 
     <script>
