--- a/tarde/projeto-gamer-tarde/index.html
+++ b/tarde/projeto-gamer-tarde/index.html
@@ -12,7 +12,7 @@
 <body>
     <header>
         <div class="header-top">
-            <div class="layout-grid">
+            <div class="layout-grid alinhamento-between-center">
 
                 <div class="contatos">
                     <div class="phone">
