--- a/manha/projeto-gamer-manha/index.html
+++ b/manha/projeto-gamer-manha/index.html
@@ -13,8 +13,10 @@
 
     <header>
 
+        <!-- linha de cima com a borda amarela -->
         <div class="header-top">
-            <div class="layout-grid">
+            
+            <div class="layout-grid alinhamento-between-center">
                 <div class="contatos">
                     <div class="phone">
                         <img src="./assets/icons/icone_telefone.svg" alt="Ícone de telefone">
