adiciona o gamer estudo de caso

--- a/tarde/projeto-gamer-tarde/login.html
+++ b/tarde/projeto-gamer-tarde/login.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto Gamer Tarde</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <title>Formulário de Login</title>
+    <link rel="stylesheet" href="css/login.css">
 </head>
-
 <body>
+    <!-- HEADER -->
     <header>
         <div class="header-top">
             <div class="layout-grid alinhamento-between-center">
@@ -97,42 +96,21 @@
         </div>
     </header>
 
-    <main>
-        <article class="banner">
-            <h1>Liga Gamers</h1>
-            <a href="" class="btn-sobre">Sobre</a>
-        </article>
 
 
-        <section class="jogos">
-            <div class="layout-grid jogos-flex">
-                <img src="assets/images/fifa23.png" alt="Imagem do jogo Fifa 2023">
-                <img src="assets/images/csgo.png" alt="Imagem do jogo Counter Strike">
-            </div>
+    <!-- MAIN -->
 
-        </section>
+    <main> 
 
+        <form action="" class="">
+            ???
+        </form>
 
-        <section class="progamer">
-            <div class="layout-grid progamer-flex">
-                <div class="progamer-titulo">
-                    <h2>Entre para o time progamer</h2>
-                    <hr>
-                </div>
-
-                <article>
-                    <div class="jogos-diferentes"></div>
-                </article>
-
-                <article>
-                    <div class="professores"></div>
-                </article>
-            </div>
-
-        </section>
     </main>
 
-    <footer></footer>
+
+
+    <!-- FOOTER -->
 
 
     <script>
@@ -148,5 +126,4 @@
 
     </script>
 </body>
-
 </html>
