--- a/Estudos/gamer-para-estudo/jogadores.html
+++ b/Estudos/gamer-para-estudo/jogadores.html
@@ -135,7 +135,7 @@
                 <tbody>
                     <tr>
                         <td>1</td>
-                        <td>Eduardo</td>
+                        <td>Eduardo</td\>
                         <td>eduardo@gmail.com</td>
                         <td><img class="yellow-trash" src="./assets/trash.png" alt=""></td>
                     </tr>
