:sparkles: feat: Adicionando exibição dinâmica do ano atual no rodapé

--- a/Estudos/estiloux-estudo-de-caso-flexbox/index.html
+++ b/Estudos/estiloux-estudo-de-caso-flexbox/index.html
@@ -88,10 +88,12 @@
     <footer>
         <div class="container-grid">
            <p class="direitos">
-               EstiloUX 2022 - Todos os direitos reservados
+               EstiloUX <span id="ano_atual"></span> - Todos os direitos reservados
             </p> 
         </div>
     </footer>
+
+    <script src="js/scripts.js"></script>
 </body>
 
 </html>
