--- a/Estudos/gamer-para-estudo/login.html
+++ b/Estudos/gamer-para-estudo/login.html
@@ -200,11 +200,14 @@
         </div>
 
         <div id="copyright">
-            &#169;Copyright2022-GamerJogosDigitais
+            &#169; Copyright <span id="ano_atual"></span> - Gamer Jogos Digitais
         </div>
 
         <img src="./assets/Botao_voltar_ao_topo.svg" id="back-to-top" alt="Voltar ao Topo">
     </footer>
+
+    <script src="js/anoCopy.js"></script>
+
 </body>
 
 </html>
